<resources>
    <string name="app_name">ThermoGuard</string>
    <string name="device_list">Liste der Geräte</string>
    <string name="action_settings">Settings</string>
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>

    <!-- Displaying Values -->
    <string name="wohnzimmer">Wohnzimmer</string>
    <string name="esszimmer">Esszimmer</string>
    <string name="kueche">Kueche</string>
    <string name="bad">Bad</string>
    <string name="arbeitszimmer">Arbeitszimmer</string>
    <string name="balkon">Balkon</string>
    <string name="schlafzimmer">Schlafzimmer</string>
</resources>
